# SAP_bot

./: README.md  main.py  setup.cfg
backup/: bot_sql.py  main.py  test.txt  weeklySQL.py
src/: bingoButtons.py  bingoTurtle.py  buttonLayouts.py  buttonTest.py  env.py  main.py  sqlDatabase.py  sqlManipulation.py  testMain.py  weeklyButtons.py  weeklyInput.py  weeklySQL.py
