[metadata]
name = SAP_Bot
version = 0.0.1
license = GNUv3
description = Discord bot for recording challenge completions and sharing user scores.
long_description = file: README.rst
author = HappyClamps
author_email = none
classifiers=
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment :: Turn Based Strategy

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   py-cord 2.3.2
   numpy 1.24.1
   pandas 1.5.3

[options.packages.find]
where=src